吕杰：canvas-translate-rotate-scale

--- a/canvas-弧和圆/index.html
+++ b/canvas-弧和圆/index.html
@@ -24,7 +24,7 @@
     canvas.width = 600 * 4;
     canvas.height = 600 * 4;
 
-    // 解决锯齿状问题，先放大canvs，在缩小
+    // 解决锯齿状问题
     ctx.scale(4, 4);
 
     // 画一个圆弧
